# fastapi_crud

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: fastapi_crud.yml
alembic/: env.py
alembic/versions/: 18b69c26f7ef_add_relations_between_models.py  349fac20df60_improve_email_column_in_users.py  4c864611810d_add_is_deleted_column_to_user_post_.py  afcfeed46e3f_add_role_column_to_users.py  dcd16f90fbbe_fix_updated_at_column.py  f10149bd53f7_add_hashed_password_to_user.py  f13c515d42e1_initial_migration.py
app/: main.py
app/core/: __init__.py  config.py  exceptions.py  middlewares.py
app/core/mappers/: auth.py  comments.py  posts.py  tags.py  users.py
app/core/security/: roles.py  tokens.py
app/models/: __init__.py  comment.py  mixin.py  post.py  relations.py  tag.py  user.py
app/routers/: __init__.py  auth.py  comments.py  posts.py  tags.py  users.py
app/routers/dependencies/: __init__.py  auth.py  db.py  mappers.py  security.py  services.py  validators.py
app/schemas/: __init__.py  comment.py  post.py  tag.py  user.py
app/services/: base.py  base_user_scoped.py  comments.py  mixin.py  posts.py  tags.py  users.py
app/services/converters/: passwords.py
app/services/validators/: business.py  integrity.py  passwords.py
app/utils/: __init__.py  constants.py  pagination.py  validators.py
tests/: conftest.py
tests/fixtures/: __init__.py  comments.py  posts.py  tags.py  users.py
tests/test_routers/: conftest.py  test_auth.py  test_comments.py  test_posts.py  test_tags.py  test_users.py
tests/test_services/: test_business_validator.py  test_comment_service.py  test_integrity_validator.py  test_post_service.py  test_tag_service.py  test_user_scoped_base_service.py  test_user_service.py
tests/test_utils/: test_validators.py
