[project]
name = "fastapi-crud"
version = "0.1.0"
description = "Example of a FastAPI CRUD app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.44",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
